# web-rs

./: Cargo.toml  justfile
.github/workflows/: pr.yml
src/: frame.rs
src/video/: color.rs  decoder.rs  dimensions.rs  encoder.rs
web-async/: CHANGELOG.md  Cargo.toml
web-async/src/: deadlock.rs  lib.rs  lock.rs  spawn.rs
web-codecs/: CHANGELOG.md  Cargo.toml
web-codecs/src/: frame.rs  timestamp.rs
web-codecs/src/audio/: data.rs  decoder.rs  encoder.rs
web-codecs/src/video/: color.rs  decoder.rs  encoder.rs  frame.rs
web-message/: CHANGELOG.md  Cargo.toml
web-message-derive/: CHANGELOG.md
web-message-derive/src/: lib.rs
web-message/src/: derive.rs  error.rs  lib.rs  message.rs
web-streams/: CHANGELOG.md  Cargo.toml
